# noita-utility-box

./: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  flake.nix  justfile  push-release.sh  readme.md
.github/workflows/: ci.yml  finalize-artifacts.sh  release.yml
macros/: Cargo.toml
macros/src/: lib.rs
noita-engine-reader/: Cargo.toml
noita-engine-reader-macros/: Cargo.toml
noita-engine-reader-macros/src/: lib.rs
noita-engine-reader/src/: lib.rs
noita-engine-reader/src/memory/: exe_image.rs  mod.rs  process_ref.rs  string.rs  win32ptr.rs
noita-engine-reader/src/noita/: discovery.rs  mod.rs  rng.rs
noita-engine-reader/src/noita/types/: cell_factory.rs  components.rs  mod.rs  platform.rs  spells.rs
noita-engine-reader/tests/: common.rs  discovery.rs  playground.rs
src/: address-map.toml  app.rs  lib.rs  main.rs  orb_searcher.rs  update_check.rs  util.rs  widgets.rs
src/entities/: mod.rs  wand.rs
src/memory/: exe_image.rs  mod.rs  process_ref.rs  string.rs  win32ptr.rs
src/noita/: discovery.rs  mod.rs  rng.rs
src/noita/types/: cell_factory.rs  components.rs  mod.rs  platform.rs
src/tools/: address_maps.rs  live_stats.rs  material_list.rs  material_pipette.rs  mod.rs  orb_radar.rs  player_info.rs  player_infos.rs  process_panel.rs  settings.rs
src/tools/streamer_wands/: data.rs  mod.rs
