[package]
name = "noita-utility-box"
description = "A collection of memory-reading utilities for the game Noita"
version = "0.2.1"
license = "MIT"
edition = "2021"

[features]
default = ["sneaky"]
sneaky = ["dep:export-resolver", "dep:str_crypter"]

[dependencies]
anyhow = "1"
color-eyre = "0.6"
convert_case = "0.6"
derive_more = { version = "1", default-features = false, features = [
    "debug",
    "deref",
    "display",
] }
eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
egui-modal = "0.5"
egui_extras = { version = "0.29", features = ["image"] }
egui_tiles = "0.10"
fastrand = "2"
futures = "0.3"
fuzzy-matcher = "0.3"
iced-x86 = "1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "bmp",
] }
lazy-regex = "3"
memchr = "2"
obws = { version = "0.13", features = ["events"] }
open-enum = "0.5"
rayon = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
smart-default = "0.7"
strfmt = "0.2"
sysinfo = "0.32"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2"
zerocopy = { version = "0.8", default-features = false, features = [
    "alloc",
    "derive",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
export-resolver = { version = "1", optional = true }
str_crypter = { version = "1", optional = true }
windows = { version = "0.58", default-features = false, features = [
    "Wdk_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
] }

[build-dependencies]
winresource = { version = "0.1", default-features = false }
