[workspace]
resolver = "2"

[package]
name = "noita-utility-box"
description = "A collection of memory-reading utilities for the game Noita"
version = "0.4.1"
edition = "2024"
license = "MIT"

[features]
default = ["noita-engine-reader/sneaky"]

[dependencies]
noita-engine-reader = { path = "noita-engine-reader" }

anyhow = { version = "1", features = ["backtrace"] }
color-eyre = "0.6"
derive_more = { version = "2", default-features = false, features = [
    "debug",
    "deref",
    "display",
] }
eframe = { version = "0.32", features = ["persistence", "ron", "wgpu"] }
egui_extras = { version = "0.32", features = ["image"] }
egui_tiles = "0.13"
fastrand = "2"
futures = "0.3"
fuzzy-matcher = "0.3"
image = { version = "0.25", default-features = false, features = [
    "png",
    "bmp",
] }
obws = { version = "0.14", features = ["events"] }
rayon = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
smart-default = "0.7"
strfmt = "0.2"
sysinfo = "0.36"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2"
wgpu = "25" # enables the wgpu default features so we get the default backends
serde_json = { version = "1.0.141", features = ["preserve_order"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", default-features = false, features = [
    "Win32_System_Console",
] }

[build-dependencies]
winresource = { version = "0.1", default-features = false }
