[package]
name = "noita-engine-reader"
version = "0.3.0"
edition = "2024"
license = "MIT"

[features]
default = ["sneaky", "lookup"]
sneaky = ["dep:export-resolver", "dep:str_crypter"]
lookup = ["dep:sysinfo"]

[dependencies]
noita-engine-reader-macros = { path = "../noita-engine-reader-macros" }

convert_case = "0.8"
iced-x86 = "1"
lazy-regex = "3"
memchr = "2"
open-enum = "0.5"
sysinfo = { version = "0.35", optional = true }
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }

derive_more = { version = "2", default-features = false, features = [
    "debug",
    "deref",
    "display",
] }
zerocopy = { version = "0.8", default-features = false, features = [
    "alloc",
    "derive",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
export-resolver = { version = "1", optional = true }
str_crypter = { version = "1", optional = true }
windows = { version = "0.61", default-features = false, features = [
    "Wdk_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
anyhow = "1"
rayon = "1.10.0"
sysinfo = "0.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
